manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react-deployment
  namespace: frontend-prod
  labels:
    app: frontend-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend
          image: 317429619308.dkr.ecr.us-east-1.amazonaws.com/frontend-react:1.1.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
