manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react-service
  namespace: frontend-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend-react
